--- a/v3.html
+++ b/v3.html
@@ -572,7 +572,7 @@
         </div>
         
         <div class="footer">
-            <p>Created with ❤️ for Norwegian learners | Now with centered progress indicators!</p>
+            <p>Created with ❤️ for Norwegian learners | Flip the cards to discover the alphabet!</p>
         </div>
     </div>
 
