--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
     
     <header>
         <h1>Enhanced Norwegian Alphabet Flashcards</h1>
-        <p class="subtitle">Master the Norwegian alphabet with interactive flashcards and quizzes! Now with dark mode and centered progress indicator.</p>
+        <p class="subtitle">Master the Norwegian alphabet with interactive flashcards and quizzes! </p>
     </header>
     
     <div class="app-container">
@@ -995,5 +995,3 @@
 </body>
 </html>
 
-</body>
-</html>
